# prefix_scan

./: CMakeLists.txt  README.md  main.cpp  scanArray.cu  scanArray.h
